[tool.poetry]
name = "yieldio"
version = "1.0.0"
description = "An async framework implemented only with generators."
authors = ["Abraham Murciano <abrahammurciano@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typed-data-structures = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
